--- a/Diagnosing breast cancer.ipynb
+++ b/Diagnosing breast cancer.ipynb
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55ffacbf",
+   "id": "e9d29e95",
    "metadata": {},
    "source": [
     "Now organise the columns by mean, se and worst to see which columns correlate with the diagnosis being malignant or benign"
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "756ee884",
+   "id": "b5fccc2d",
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dfbce2a",
+   "id": "478fac3a",
    "metadata": {},
    "source": [
     "Putting all the mean features into a list by indexing the columns starting after the diagnosis column"
@@ -809,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "35cdcbd9",
+   "id": "8c42a2fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "836de991",
+   "id": "7161e2f4",
    "metadata": {},
    "source": [
     "Doing the same for the standard error features"
@@ -827,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "a71519fa",
+   "id": "fc8253b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37db9873",
+   "id": "27c6f367",
    "metadata": {},
    "source": [
     "and putting the worst features into a list too"
@@ -845,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "5e8c1e98",
+   "id": "f04bf270",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb884981",
+   "id": "250c82e3",
    "metadata": {},
    "source": [
     "Now to add the diagnosis column to each of the features list so that we can apply the correlation function to each list and see how much the diagnosis column correlates with each column in the mean features"
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "52276f6b",
+   "id": "082a9544",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +875,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "cbb63e7a",
+   "id": "55d654a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +887,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "0cbc46be",
+   "id": "d92f6953",
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf32b30",
+   "id": "40a98de0",
    "metadata": {},
    "source": [
     "Now the columns which show strongest correlation with diagnosis will be used as a prediction variable."
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "965d15cb",
+   "id": "9a023d14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8930227a",
+   "id": "765b8f0c",
    "metadata": {},
    "source": [
     "Now use a function from the sci-kit learn library to automatically split our data into training and test data. test_size tis the percentage of your data that your model will be tested on. random_state = 1 ensures that if the train_test_split function is called again the same data will be in the training data and same data will be in the test data."
@@ -1207,7 +1207,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "fdfadbfa",
+   "id": "6bdb3b74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "8725db3d",
+   "id": "30ade5ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "e8238c95",
+   "id": "ce904225",
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "411e9cda",
+   "id": "cdbaca6d",
    "metadata": {},
    "source": [
     "Now the features on the trainig set each have their own ranges. We want all the ranges to be the same otherwise the features with larger values may get favoured more. So it is common practice to normalise the features so that the values of each column range from 0 to 1. We can import the minmax scaler function from the sci-kit learn library to do this for us"
@@ -1262,7 +1262,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "feab52ce",
+   "id": "9d59eb88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,7 +1272,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5a8f7424",
+   "id": "610528b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "07ae8559",
+   "id": "c83b2a20",
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "89a4d74f",
+   "id": "7c7073d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1691,7 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "52133057",
+   "id": "7070f598",
    "metadata": {},
    "outputs": [
     {
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0ec50ef",
+   "id": "e884b266",
    "metadata": {},
    "source": [
     "fit_transform learns and applies the transformation to the data it's called on, while transform applies the same transformation to new data using the parameters learned from a previous fit_transform operation. This is crucial in maintaining the consistency of preprocessing across different datasets, especially when dealing with machine learning tasks to prevent data leakage and ensure a fair evaluation of model performance."
@@ -2097,7 +2097,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "40767bbe",
+   "id": "9904b1dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2107,7 +2107,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "93869bf8",
+   "id": "97f20ece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2120,136 +2120,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "8ce6ff15",
+   "execution_count": 89,
+   "id": "8f6e3761",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "48b42336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = MLPClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "6e88c4bb",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>perimeter_mean</th>\n",
-       "      <th>compactness_mean</th>\n",
-       "      <th>concavity_mean</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.335429</td>\n",
-       "      <td>0.456168</td>\n",
-       "      <td>0.317948</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.299910</td>\n",
-       "      <td>0.147506</td>\n",
-       "      <td>0.069681</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.363693</td>\n",
-       "      <td>0.556469</td>\n",
-       "      <td>0.500234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.215880</td>\n",
-       "      <td>0.163886</td>\n",
-       "      <td>0.093861</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.278557</td>\n",
-       "      <td>0.100209</td>\n",
-       "      <td>0.064948</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>478</th>\n",
-       "      <td>0.598507</td>\n",
-       "      <td>0.427949</td>\n",
-       "      <td>0.596298</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>479</th>\n",
-       "      <td>0.169097</td>\n",
-       "      <td>0.098184</td>\n",
-       "      <td>0.052741</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>480</th>\n",
-       "      <td>0.486559</td>\n",
-       "      <td>0.501871</td>\n",
-       "      <td>0.396439</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>481</th>\n",
-       "      <td>0.317877</td>\n",
-       "      <td>0.153580</td>\n",
-       "      <td>0.034255</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>482</th>\n",
-       "      <td>0.268261</td>\n",
-       "      <td>0.056070</td>\n",
-       "      <td>0.060028</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>483 rows × 3 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     perimeter_mean  compactness_mean  concavity_mean\n",
-       "0          0.335429          0.456168        0.317948\n",
-       "1          0.299910          0.147506        0.069681\n",
-       "2          0.363693          0.556469        0.500234\n",
-       "3          0.215880          0.163886        0.093861\n",
-       "4          0.278557          0.100209        0.064948\n",
-       "..              ...               ...             ...\n",
-       "478        0.598507          0.427949        0.596298\n",
-       "479        0.169097          0.098184        0.052741\n",
-       "480        0.486559          0.501871        0.396439\n",
-       "481        0.317877          0.153580        0.034255\n",
-       "482        0.268261          0.056070        0.060028\n",
-       "\n",
-       "[483 rows x 3 columns]"
+       "MLPClassifier()"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee7bf01d",
+   "metadata": {},
+   "source": [
+    "Now train the model using our training data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "a396231b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/marahsstuff/opt/anaconda3/lib/python3.9/site-packages/sklearn/neural_network/_multilayer_perceptron.py:692: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (200) reached and the optimization hasn't converged yet.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MLPClassifier()"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e0061939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.predict(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "d4d5acd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "aa45a416",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_performance(y_true, y_pred):\n",
+    "    \n",
+    "    matrix = confusion_matrix(y_true, y_pred)\n",
+    "    precision = precision_score(y_true, y_pred)\n",
+    "    recall = recall_score(y_true, y_pred)\n",
+    "    accuracy = accuracy_score(y_true, y_pred)\n",
+    "    \n",
+    "    print(f\"The confusion matrix is {matrix}\")\n",
+    "    print(\"The precision score is %.2f\" % precision)\n",
+    "    print(\"The recall score is %.2f\" % recall)\n",
+    "    print(\"The accuracy score is %.2f\" % accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "9572216b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The confusion matrix is [[48  4]\n",
+      " [ 7 27]]\n",
+      "The precision score is 0.87\n",
+      "The recall score is 0.79\n",
+      "The accuracy score is 0.87\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_performance(test_y, predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "807a7248",
+   "metadata": {},
+   "source": [
+    "Now try out the different models and check the performance for which model is closest to actual test diagnosis results."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed248d6a",
+   "id": "e7f54907",
    "metadata": {},
    "outputs": [],
    "source": []
